[package]
name = "connector"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/main/rust/lib.rs"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
panic = "abort"
codegen-units = 1

[dependencies]
jni = { version = "0.19.0" } # jni bindings
log = "0.4.14"               # logging
mpg123-sys = "0.6.0"         # mp3
ogg-sys = "0.0.9"            # ogg
vorbis-sys = "0.1.1"         # vorbis
opusic-sys = "0.5.0"         # opus (v1.5.2)
libsamplerate = "0.1.0"      # samplerate (c2rust)
fdkaac-sys = { git = "https://github.com/LuoZijun/rust-fdkaac-sys", version = "0.1.6" } # aac
